Implements fourth query